# ucc

./: Gemfile  NEWS  _config.yml  autogen.sh  configure.ac  index.md  test.c
.github/workflows/: clang-tidy-nvidia.yaml  codestyle.yaml  main.yaml  test.yaml
assets/css/: style.scss
assets/js/: main.js
config/m4/: configure.m4  dietgpu.m4  ucx.m4
src/: Makefile.am
src/coll_patterns/: recursive_knomial.h  sra_knomial.h
src/coll_score/: ucc_coll_score.c  ucc_coll_score.h
src/components/tl/cuda_ipc/: Makefile.am  tl_cuda_ipc.c  tl_cuda_ipc.h  tl_cuda_ipc_cache.c  tl_cuda_ipc_cache.h  tl_cuda_ipc_coll.c  tl_cuda_ipc_coll.h  tl_cuda_ipc_context.c  tl_cuda_ipc_ep_hash.h  tl_cuda_ipc_lib.c  tl_cuda_ipc_ring.c  tl_cuda_ipc_ring.h  tl_cuda_ipc_team.c
src/components/tl/cuda_ipc/allgather/: allgather_linear.c  allgather_linear_multi.c  allgather_ring.c
src/components/tl/cuda_ipc/alltoallv/: alltoallv.c
src/components/tl/cuda_ipc/reduce_scatter/: reduce_scatter_linear.c  reduce_scatter_ring.c
src/core/: ucc_coll.c  ucc_context.c  ucc_context.h  ucc_global_opts.c  ucc_lib.c  ucc_mc.c  ucc_mc.h  ucc_sbgp.c  ucc_sbgp.h  ucc_team.c  ucc_team.h
src/schedule/: ucc_schedule.c  ucc_schedule.h  ucc_schedule_pipelined.c  ucc_schedule_pipelined.h
src/utils/: ucc_coll_utils.h  ucc_dt_reduce.h  ucc_log.h  ucc_math.h  ucc_parser.c  ucc_parser.h  ucc_proc_info.c
test/gtest/: Makefile.am
test/mpi/: Makefile.am  buffer.cc  main.cc  test_allgather.cc  test_alltoallv.cc  test_case.cc  test_mpi.h
tools/perf/: Makefile.am  ucc_pt_benchmark.cc  ucc_pt_benchmark.h  (+7 more)
(+87 files in other folders)
